--- a/package.json
+++ b/package.json
@@ -2,5 +2,16 @@
   "dependencies": {
     "express": "^4.21.0",
     "mongoose": "^8.6.3"
-  }
+  },
+  "name": "express-demo2",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
