--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "express": "^4.21.0",
-    "mongoose": "^8.6.3"
+    "mongoose": "^8.6.3",
+    "nodemon": "^3.1.7"
   },
   "name": "express-demo2",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
+    "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
